Update release.yaml fixed cp

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -52,7 +52,7 @@
             run: flutter build apk --split-per-abi
             shell: bash
           - name: Package android build output
-            run: cp build/app/outputs/flutter-apk/app-*release.apk *.apk
+            run: cp build/app/outputs/flutter-apk/app-*release.apk ./
             shell: bash
 
           - name: Upload android outputs
