--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -106,61 +106,61 @@
                 Kazumi_windows_*.zip
 
           # Sign Zip
-          - run: New-Item -Path "build/windows/zip_signed_output" -ItemType Directory
-          - name: sign windows zip
-            uses: signpath/github-action-submit-signing-request@v1.1
-            with:
-              api-token: '${{ secrets.SIGNPATH_API_TOKEN }}'
-              organization-id: '8da8baf2-472f-4d39-8927-8258578111eb'
-              project-slug: 'Kazumi'
-              signing-policy-slug: 'release-signing'
-              artifact-configuration-slug: 'Packet'
-              github-artifact-id: '${{ steps.unsigned-windows-zip-artifacts.outputs.artifact-id }}'
-              wait-for-completion: true
-              output-artifact-directory: 'build/windows/zip_signed_output'
+          # - run: New-Item -Path "build/windows/zip_signed_output" -ItemType Directory
+          # - name: sign windows zip
+          #   uses: signpath/github-action-submit-signing-request@v1.1
+          #   with:
+          #     api-token: '${{ secrets.SIGNPATH_API_TOKEN }}'
+          #     organization-id: '8da8baf2-472f-4d39-8927-8258578111eb'
+          #     project-slug: 'Kazumi'
+          #     signing-policy-slug: 'release-signing'
+          #     artifact-configuration-slug: 'Packet'
+          #     github-artifact-id: '${{ steps.unsigned-windows-zip-artifacts.outputs.artifact-id }}'
+          #     wait-for-completion: true
+          #     output-artifact-directory: 'build/windows/zip_signed_output'
           
-          - name: Upload windows zip signed ouputs
-            uses: actions/upload-artifact@v4
-            id: signed-windows-zip-artifacts
-            with:
-              name: windows_zip_signed_outputs
-              path: build/windows/zip_signed_output/*.zip
+          # - name: Upload windows zip signed ouputs
+          #   uses: actions/upload-artifact@v4
+          #   id: signed-windows-zip-artifacts
+          #   with:
+          #     name: windows_zip_signed_outputs
+          #     path: build/windows/zip_signed_output/*.zip
               
           # Replace Unpacked Artifact with Signed Artifact
-          - name: Replace Unpacked Artifact with Signed Artifact
-            run: Expand-Archive -Path "build/windows/zip_signed_output/Kazumi_windows_${env:tag}.zip" -DestinationPath "build/windows/x64/runner/Release" -Force
+          # - name: Replace Unpacked Artifact with Signed Artifact
+          #   run: Expand-Archive -Path "build/windows/zip_signed_output/Kazumi_windows_${env:tag}.zip" -DestinationPath "build/windows/x64/runner/Release" -Force
           
           # Build Unsigned MSIX
-          - name: Build unsigned msix
-            run: dart run msix:create
-          - name: Upload windows msix ouputs
-            uses: actions/upload-artifact@v4
-            id: unsigned-windows-msix-artifacts
-            with:
-              name: windows_msix_outputs
-              path: |
-                build/windows/x64/runner/Release/kazumi.msix
+          # - name: Build unsigned msix
+          #   run: dart run msix:create
+          # - name: Upload windows msix ouputs
+          #   uses: actions/upload-artifact@v4
+          #   id: unsigned-windows-msix-artifacts
+          #   with:
+          #     name: windows_msix_outputs
+          #     path: |
+          #       build/windows/x64/runner/Release/kazumi.msix
           
           # Sign MSIX
-          - run: New-Item -Path "build/windows/msix_signed_output" -ItemType Directory
-          - name: sign windows msix
-            uses: signpath/github-action-submit-signing-request@v1.1
-            with:
-              api-token: '${{ secrets.SIGNPATH_API_TOKEN }}'
-              organization-id: '8da8baf2-472f-4d39-8927-8258578111eb'
-              project-slug: 'Kazumi'
-              signing-policy-slug: 'release-signing'
-              artifact-configuration-slug: 'MSIX'
-              github-artifact-id: '${{ steps.unsigned-windows-msix-artifacts.outputs.artifact-id }}'
-              wait-for-completion: true
-              output-artifact-directory: 'build/windows/msix_signed_output'
+          # - run: New-Item -Path "build/windows/msix_signed_output" -ItemType Directory
+          # - name: sign windows msix
+          #   uses: signpath/github-action-submit-signing-request@v1.1
+          #   with:
+          #     api-token: '${{ secrets.SIGNPATH_API_TOKEN }}'
+          #     organization-id: '8da8baf2-472f-4d39-8927-8258578111eb'
+          #     project-slug: 'Kazumi'
+          #     signing-policy-slug: 'release-signing'
+          #     artifact-configuration-slug: 'MSIX'
+          #     github-artifact-id: '${{ steps.unsigned-windows-msix-artifacts.outputs.artifact-id }}'
+          #     wait-for-completion: true
+          #     output-artifact-directory: 'build/windows/msix_signed_output'
           
-          - name: Upload windows msix signed ouputs
-            uses: actions/upload-artifact@v4
-            id: signed-windows-msix-artifacts
-            with:
-              name: windows_msix_signed_outputs
-              path: build/windows/msix_signed_output/*.msix
+          # - name: Upload windows msix signed ouputs
+          #   uses: actions/upload-artifact@v4
+          #   id: signed-windows-msix-artifacts
+          #   with:
+          #     name: windows_msix_signed_outputs
+          #     path: build/windows/msix_signed_output/*.msix
 
       flutter-build-linux:
         name: "Release for Linux"
@@ -360,22 +360,22 @@
           - name: Download windows zip build file
             uses: actions/download-artifact@v4
             with:
-              name: windows_zip_signed_outputs
-              path: windows_zip_signed_outputs 
+              name: windows_outputs
+              path: windows_outputs 
           - name: List files in windows_outputs directory
-            run: ls -l windows_zip_signed_outputs   
+            run: ls -l windows_outputs
           - name: Copy windows build file to root
-            run: cp windows_zip_signed_outputs/* Kazumi_windows_${{ env.tag }}.zip
+            run: cp windows_outputs/* Kazumi_windows_${{ env.tag }}.zip
 
-          - name: Download windows msix build file
-            uses: actions/download-artifact@v4
-            with:
-              name: windows_msix_signed_outputs
-              path: windows_msix_signed_outputs  
-          - name: List files in windows_msix_signed_outputs directory
-            run: ls -l windows_msix_signed_outputs   
-          - name: Copy windows build file to root
-            run: cp windows_msix_signed_outputs/* Kazumi_windows_${{ env.tag }}.msix
+          # - name: Download windows msix build file
+          #   uses: actions/download-artifact@v4
+          #   with:
+          #     name: windows_msix_signed_outputs
+          #     path: windows_msix_signed_outputs  
+          # - name: List files in windows_msix_signed_outputs directory
+          #   run: ls -l windows_msix_signed_outputs   
+          # - name: Copy windows build file to root
+          #   run: cp windows_msix_signed_outputs/* Kazumi_windows_${{ env.tag }}.msix
 
           - name: Download android build file
             uses: actions/download-artifact@v4
@@ -444,7 +444,6 @@
               files: |
                 build/signed/*.apk
                 Kazumi_windows_*.zip
-                Kazumi_windows_*.msix
                 Kazumi_macos_*.dmg
                 Kazumi_ios_*.ipa
                 Kazumi_linux_*.tar.gz
